// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`catalog #1 — extending X's diagonal to a three outranks the dual-purpose block/extend move narrowCandidates ranked output 1`] = `
{
  "moves": [
    {
      "col": 14,
      "row": 8,
      "score": 240,
    },
    {
      "col": 13,
      "row": 9,
      "score": 240,
    },
    {
      "col": 10,
      "row": 12,
      "score": 240,
    },
    {
      "col": 9,
      "row": 13,
      "score": 240,
    },
    {
      "col": 13,
      "row": 10,
      "score": 18,
    },
  ],
  "source": "tactical",
}
`;

exports[`catalog #2 — O's dual-purpose 12,13 competes in the soft tier, behind the urgent answers to X's three narrowCandidates ranked output 1`] = `
{
  "moves": [
    {
      "col": 15,
      "row": 7,
      "score": 50,
    },
    {
      "col": 14,
      "row": 8,
      "score": 50,
    },
    {
      "col": 13,
      "row": 12,
      "score": 250,
    },
    {
      "col": 12,
      "row": 12,
      "score": 242,
    },
    {
      "col": 8,
      "row": 12,
      "score": 240,
    },
  ],
  "source": "tactical",
}
`;

exports[`catalog #3 — X's diagonal four is blocked on one end; boxed-five confirms a second valid block exists narrowCandidates ranked output 1`] = `
{
  "moves": [
    {
      "col": 15,
      "row": 7,
      "score": 500,
    },
    {
      "col": 16,
      "row": 6,
      "score": 500,
    },
  ],
  "source": "forced",
}
`;

exports[`catalog #4 — X must answer O's open-three; the dual-purpose block outscores the pure block narrowCandidates ranked output 1`] = `
{
  "moves": [
    {
      "col": 12,
      "row": 14,
      "score": 210,
    },
    {
      "col": 8,
      "row": 10,
      "score": 200,
    },
    {
      "col": 7,
      "row": 9,
      "score": 0,
    },
    {
      "col": 13,
      "row": 15,
      "score": 0,
    },
  ],
  "source": "tactical",
}
`;

exports[`catalog #5 — O's open four is unstoppable; desperado ranks X's own open-four makers over futile blocks narrowCandidates ranked output 1`] = `
{
  "moves": [
    {
      "col": 9,
      "row": 9,
      "score": 750,
    },
    {
      "col": 13,
      "row": 13,
      "score": 750,
    },
    {
      "col": 8,
      "row": 8,
      "score": 250,
    },
    {
      "col": 14,
      "row": 14,
      "score": 250,
    },
  ],
  "source": "tactical",
}
`;

exports[`catalog #6 — X's single block (9,7) works only because it combines with X's pre-existing 15,13 to box the far end narrowCandidates ranked output 1`] = `
{
  "moves": [
    {
      "col": 7,
      "row": 9,
      "score": 1000,
    },
  ],
  "source": "forced",
}
`;

exports[`catalog #7 — X's 9,9 is the sole urgent candidate: a recognized fork (two gapped two-tier lines promoted at once) narrowCandidates ranked output 1`] = `
{
  "moves": [
    {
      "col": 9,
      "row": 9,
      "score": 480,
    },
    {
      "col": 6,
      "row": 11,
      "score": 250,
    },
    {
      "col": 8,
      "row": 11,
      "score": 250,
    },
    {
      "col": 10,
      "row": 11,
      "score": 250,
    },
    {
      "col": 8,
      "row": 10,
      "score": 250,
    },
  ],
  "source": "tactical",
}
`;

exports[`catalog #8 — O's diagonal four is blocked on one end; boxed-five again gives X a second valid block narrowCandidates ranked output 1`] = `
{
  "moves": [
    {
      "col": 4,
      "row": 16,
      "score": 500,
    },
    {
      "col": 3,
      "row": 17,
      "score": 500,
    },
  ],
  "source": "forced",
}
`;

exports[`catalog #9 — X's 10,8 is the sole urgent candidate: a recognized fork (two clean two-tier lines promoted at once) narrowCandidates ranked output 1`] = `
{
  "moves": [
    {
      "col": 8,
      "row": 10,
      "score": 480,
    },
    {
      "col": 9,
      "row": 9,
      "score": 260,
    },
    {
      "col": 6,
      "row": 11,
      "score": 250,
    },
    {
      "col": 6,
      "row": 8,
      "score": 242,
    },
    {
      "col": 10,
      "row": 12,
      "score": 242,
    },
  ],
  "source": "tactical",
}
`;

exports[`catalog #10 — same board as #7, but O to move: O must occupy X's fork point narrowCandidates ranked output 1`] = `
{
  "moves": [
    {
      "col": 9,
      "row": 9,
      "score": 0,
    },
    {
      "col": 7,
      "row": 14,
      "score": 48,
    },
    {
      "col": 7,
      "row": 15,
      "score": 48,
    },
    {
      "col": 7,
      "row": 16,
      "score": 48,
    },
    {
      "col": 6,
      "row": 14,
      "score": 48,
    },
  ],
  "source": "tactical",
}
`;

exports[`catalog #11 — O must answer X's row-10 open-three; all four blocks (critical + distance) lead narrowCandidates ranked output 1`] = `
{
  "moves": [
    {
      "col": 5,
      "row": 10,
      "score": 480,
    },
    {
      "col": 6,
      "row": 10,
      "score": 450,
    },
    {
      "col": 10,
      "row": 10,
      "score": 210,
    },
    {
      "col": 11,
      "row": 10,
      "score": 10,
    },
  ],
  "source": "tactical",
}
`;

exports[`catalog #12 — O's 10,9 blocks two of X's open-twos at once (soft tier, no forced/urgent threats) narrowCandidates ranked output 1`] = `
{
  "moves": [
    {
      "col": 9,
      "row": 10,
      "score": 8,
    },
    {
      "col": 12,
      "row": 7,
      "score": 48,
    },
    {
      "col": 13,
      "row": 7,
      "score": 48,
    },
    {
      "col": 14,
      "row": 7,
      "score": 48,
    },
    {
      "col": 10,
      "row": 8,
      "score": 28,
    },
  ],
  "source": "tactical",
}
`;

exports[`catalog #13 — O's real win is the two-move 6,11 fork; the tempting one-move 7,11 'open-four' is a mirage voided by O's own pre-existing 12,11... a boxed five in disguise narrowCandidates ranked output 1`] = `
{
  "moves": [
    {
      "col": 11,
      "row": 6,
      "score": 490,
    },
    {
      "col": 11,
      "row": 5,
      "score": 1000,
    },
    {
      "col": 12,
      "row": 14,
      "score": 200,
    },
    {
      "col": 11,
      "row": 7,
      "score": 764,
    },
    {
      "col": 11,
      "row": 11,
      "score": 500,
    },
  ],
  "source": "tactical",
}
`;

exports[`catalog #14 — O's 9,6 is the sole urgent candidate: a recognized fork (two open-three lines promoted at once) narrowCandidates ranked output 1`] = `
{
  "moves": [
    {
      "col": 6,
      "row": 10,
      "score": 720,
    },
    {
      "col": 7,
      "row": 10,
      "score": 720,
    },
    {
      "col": 8,
      "row": 10,
      "score": 720,
    },
    {
      "col": 2,
      "row": 10,
      "score": 240,
    },
    {
      "col": 3,
      "row": 10,
      "score": 240,
    },
  ],
  "source": "tactical",
}
`;

exports[`catalog #15 — X to move: O already has a four; X also has an open-three whose critical gain is 8,12 narrowCandidates ranked output 1`] = `
{
  "moves": [
    {
      "col": 14,
      "row": 11,
      "score": 500,
    },
    {
      "col": 15,
      "row": 11,
      "score": 500,
    },
  ],
  "source": "forced",
}
`;

exports[`catalog #16 — X to move after O's 13,10: must-answer keeps racing fours (8,10) alongside O's open-three blocks narrowCandidates ranked output 1`] = `
{
  "moves": [
    {
      "col": 10,
      "row": 8,
      "score": 700,
    },
    {
      "col": 9,
      "row": 10,
      "score": 480,
    },
    {
      "col": 11,
      "row": 10,
      "score": 478,
    },
    {
      "col": 10,
      "row": 7,
      "score": 450,
    },
    {
      "col": 12,
      "row": 13,
      "score": 220,
    },
  ],
  "source": "tactical",
}
`;

exports[`catalog #17 — X to move: O's row-13 OOOO.O is a live four (five-or-more); forced block at 13,12 narrowCandidates ranked output 1`] = `
{
  "moves": [
    {
      "col": 12,
      "row": 13,
      "score": 1012,
    },
  ],
  "source": "forced",
}
`;

exports[`catalog #18 — X to move: 13,11 is the fork that creates two open-threes narrowCandidates ranked output 1`] = `
{
  "moves": [
    {
      "col": 11,
      "row": 13,
      "score": 482,
    },
    {
      "col": 6,
      "row": 11,
      "score": 10,
    },
    {
      "col": 13,
      "row": 13,
      "score": 252,
    },
    {
      "col": 11,
      "row": 11,
      "score": 252,
    },
    {
      "col": 9,
      "row": 13,
      "score": 242,
    },
  ],
  "source": "tactical",
}
`;
